<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="CS_no_send_sms_permission">This app does not have permission to send messages.</string>
    <string name="cloudpush_app_name">Push Service</string>
    <string name="hwpush_cancel">Cancel</string>
    <string name="hwpush_collect">Favorite</string>
    <string name="hwpush_collect_tip">A Favorites icon will be created on the home screen. You can touch the icon to view all your favorite notifications.</string>
    <string name="hwpush_collect_tip_known">OK</string>
    <string name="hwpush_delete">Delete</string>
    <string name="hwpush_deltitle">Delete notifications</string>
    <string name="hwpush_dialog_limit_message">A maximum of 1000 favorite notifications can be saved. Delete some notifications before you can add new ones. Go to your favorite notifications list?</string>
    <string name="hwpush_dialog_limit_ok">Go</string>
    <string name="hwpush_dialog_limit_title">Note</string>
    <string name="hwpush_forward">Forward</string>
    <string name="hwpush_goback">Back</string>
    <string name="hwpush_loading_title">Loading... Please wait.</string>
    <string name="hwpush_msg_collect">Favorites</string>
    <string name="hwpush_msg_favorites">Favorite notifications</string>
    <string name="hwpush_no_collection">No favorite notifications</string>
    <string name="hwpush_refresh">Refresh</string>
    <string name="hwpush_request_provider_permission">Store messages</string>
    <string name="hwpush_richmedia">Rich media</string>
    <string name="hwpush_selectall">Select all</string>
    <string name="hwpush_unselectall">Deselect all</string>
    <string name="ql_account">"Huawei ID: "</string>
    <string name="ql_aggreement_check">"Agree "</string>
    <string name="ql_and">" and "</string>
    <string name="ql_btn_ok">OK</string>
    <string name="ql_cacel">Cancel</string>
    <string name="ql_check_aggree">I agree to the %1$s and %2$s</string>
    <string name="ql_check_no_sim">No SIM card. Please try another login method.</string>
    <string name="ql_dialog_title">Attention</string>
    <string name="ql_enter_game_btn_name">Enter app</string>
    <string name="ql_enter_game_btn_name_reset_password">Reset password and enter app</string>
    <string name="ql_enter_game_btn_name_resetting_password">Resetting password...</string>
    <string name="ql_enter_game_btn_name_set_password">Set password and enter app</string>
    <string name="ql_enter_game_btn_name_setting_password">Setting password...</string>
    <string name="ql_hwid_policy">Privacy Policy</string>
    <string name="ql_hwid_terms">Terms of Service</string>
    <string name="ql_loading">Logging in...</string>
    <string name="ql_network_abnormally">No Internet connection. Please check your network settings. Retry?</string>
    <string name="ql_network_not_available">No Internet connection. Please check your network settings.</string>
    <string name="ql_newuser_enter_without_setpassword_error">Password (6-32 characters)</string>
    <string name="ql_no_connection">No Internet connection</string>
    <string name="ql_password_length_not_enough_error">The password must contain at least 6 characters.</string>
    <string name="ql_password_length_over_error">The password can contain a maximum of 32 characters.</string>
    <string name="ql_password_length_wrong_char_input">Invalid password.</string>
    <string name="ql_please_check_aggree">You must agree to our Terms of Service and Privacy Policy before logging in.</string>
    <string name="ql_policy_loading">Loading...</string>
    <string name="ql_privacy_policy"><u>Privacy Policy</u></string>
    <string name="ql_pwd_not_same_as_account">Your password cannot contain your account name.</string>
    <string name="ql_quick_login">Log in</string>
    <string name="ql_quick_login_hint">A message will be sent to you to verify your identity. Internet access is required to log in to Huawei ID.</string>
    <string name="ql_reset_password_fail">Failed to reset the password. Please try again.</string>
    <string name="ql_reset_password_hint_text">If you forget your password, you can reset it here.</string>
    <string name="ql_retry">Retry</string>
    <string name="ql_retry_hint">The message has not been delivered yet. Please try again or use another login method.</string>
    <string name="ql_service_aggreement"><u>Terms of Service</u></string>
    <string name="ql_set_password_fail">Failed to set the password. Please try again.</string>
    <string name="ql_set_password_hint">Password (6-32 characters)</string>
    <string name="ql_set_password_title">Successfully registered.</string>
    <string name="ql_set_password_title_registed">Phone number registered</string>
    <string name="ql_switch_login">Use another Huawei ID</string>
    <string name="ql_system_abnormally">System error. Retry?</string>
    <string name="ql_title">Log in with Huawei ID</string>
    <string name="ql_validate_certificate">Verification of the security certificate failed. Make sure you have a working Internet connection and your system time is set correctly. Retry?</string>
    <string name="ql_web_loading">Loading...</string>
    <string name="app_name">今日头条</string>
    <string name="info_confirm_to_exit">确定要退出今日头条?</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="REQUEST_PERMISSION_DENIED">没有获得权限，部分功能将无法开启</string>
    <string name="REQUEST_PERMISSION_DENIED_DESCRIPTION">该功能需要：【%1$s】权限，请点击【确定】在【应用信息】>【权限】标签里开启</string>
    <string name="REQUEST_PERMISSION_DENIED_TITLE">权限授予</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CAMERA">相机</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_CONTACT">通讯录</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_EXTERNAL_STORAGE">存储空间</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_LOCATION">定位</string>
    <string name="REQUEST_PERMISSION_DESCRIPT_SMS">短信</string>
    <string name="REQUEST_PERMISSION_GRANTED">已经获得权限，请重新点击</string>
    <string name="REQUEST_PERMISSION_REMINDER">未授予该权限</string>
    <string name="REQUEST_PERMISSION_UPDATE_RESTART">权限变更，请长按菜单键，关闭应用后，重新进入</string>
    <string name="account_account_bind">账号绑定</string>
    <string name="account_account_cancel_bind">取消绑定</string>
    <string name="account_account_click_bind">点击绑定</string>
    <string name="account_account_logout">退出登录</string>
    <string name="account_agree_user_agreement">同意今日头条用户协议</string>
    <string name="account_auth_and_login">验证登录</string>
    <string name="account_auth_code_error">验证码错误</string>
    <string name="account_auto_register_hint">未注册的用户会自动注册</string>
    <string name="account_auto_register_tips">未注册手机验证后自动注册</string>
    <string name="account_btn_cancel">取消</string>
    <string name="account_btn_ok">确定</string>
    <string name="account_change_password_hint">修改密码：&lt;我>-&lt;设置>-&lt;帐号管理></string>
    <string name="account_commit">提交</string>
    <string name="account_complete_with_space">完 成</string>
    <string name="account_confirm_and_logout">确定并退出</string>
    <string name="account_confirm_btn_txt">进入头条</string>
    <string name="account_confirm_give_up_register">确认放弃登录？</string>
    <string name="account_confirm_to_use_default_name">确认使用头条默认用户名“%s”？</string>
    <string name="account_continue_register">继续登录</string>
    <string name="account_desc_dialog_title">修改签名</string>
    <string name="account_dialog_title_default">"登录你的头条
精彩永不丢失"</string>
    <string name="account_dialog_title_favor">"登录并同步收藏
云端永久保存！"</string>
    <string name="account_dialog_title_register">"登录后保存阅读习惯
打造你的专属头条"</string>
    <string name="account_free_password_login">验证码登录</string>
    <string name="account_give_up">放弃</string>
    <string name="account_give_up_original_account">放弃原账号</string>
    <string name="account_go_to_modify">去修改</string>
    <string name="account_has_account">已有账号？</string>
    <string name="account_has_sent_auth_code">已向手机%s发送验证码</string>
    <string name="account_mobile_num_error">手机号错误</string>
    <string name="account_more_login_ways">更多登录方式</string>
    <string name="account_password_error">密码错误</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="account_send_auth_code">发送验证码</string>
    <string name="all_image">所有照片</string>
    <string name="cancel">取消</string>
    <string name="code_hint">请输入验证码</string>
    <string name="detail_menu_browser">用浏览器打开</string>
    <string name="detail_menu_copylink">复制链接</string>
    <string name="detail_menu_dislike">不感兴趣</string>
    <string name="detail_menu_favor">收藏</string>
    <string name="detail_menu_report">举报</string>
    <string name="detail_menu_setting">显示设置</string>
    <string name="detail_menu_share">分享</string>
    <string name="find_password">找回密码</string>
    <string name="label_cancel">取消</string>
    <string name="label_send">发送</string>
    <string name="login_tip">请先登录后再发表内容</string>
    <string name="mobile_hint">手机号</string>
    <string name="ok">确定</string>
    <string name="password_hint">密码</string>
    <string name="ss_hint_confirm_use_network">欢迎使用今日头条新闻客户端，本客户端使用完全免费，在使用过程中会产生流量费用，流量费用请咨询当地运营商；启动时会调用小区基站和GPS位置信息，仅用于精准化的新闻推荐服务；访问联系人数据，您可以找到和您共同使用今日头条的好友并关注。是否允许应用建立连接？</string>
    <string name="ss_hint_welcome">欢迎使用今日头条</string>
    <string name="ss_label_continue">继续</string>
    <string name="ss_no_longer_remind">下次不再提醒</string>
    <string name="ss_title_comment_dialog">评论/转发</string>
    <string name="ssl_cancel">取消</string>
    <string name="ssl_update_back">返回</string>
    <string name="ssl_update_install">安装</string>
    <string name="ssl_update_stop">停止</string>
    <string name="ssl_update_title">应用更新</string>
    <string name="ssl_update_update">更新</string>
    <string name="ssl_update_whatsnew">此版本的更新记录：</string>
    <string name="user_action_block">拉黑</string>
    <string name="user_action_delete">删除</string>
    <string name="user_action_follow">关注</string>
    <string name="user_action_manage">管理</string>
    <string name="user_action_report">举报</string>
</resources>