<?xml version="1.0" encoding="utf-8"?>
<im.quar.autolayout.view.AutoRelativeLayout android:id="@id/content_view" android:background="@drawable/account_quick_login_bg" android:paddingLeft="@dimen/account_margin_horizontal" android:paddingRight="@dimen/account_margin_horizontal" android:clipToPadding="false" android:layout_width="540.0px" android:layout_height="768.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_close" android:layout_width="92.0px" android:layout_height="92.0px" android:layout_marginRight="-40.0px" android:src="@drawable/close_sdk_login" android:scaleType="centerInside" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:textSize="34.0px" android:textColor="@color/ssxinzi3" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_tip" android:includeFontPadding="false" android:layout_below="@id/img_close" android:layout_centerHorizontal="true" android:lineSpacingExtra="4.0dip" />
    <im.quar.autolayout.view.AutoRelativeLayout android:id="@id/mobile_num_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0px" android:layout_below="@id/tv_title">
        <EditText android:textSize="32.0px" android:textColor="@color/ssxinzi2" android:textColorHint="@color/ssxinzi9" android:id="@id/edt_mobile_num" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/mobile_hint" android:minEms="11" android:singleLine="true" android:maxLength="14" android:layout_toLeftOf="@id/divider" android:layout_centerVertical="true" android:inputType="phone" />
        <TextView android:textSize="28.0px" android:textColor="@color/account_send_auth_code_text" android:id="@id/tv_send_auth_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_send_auth_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <View android:id="@id/divider" android:background="@color/ssxinxian9" android:layout_width="1.0px" android:layout_height="32.0px" android:layout_marginLeft="30.0px" android:layout_marginRight="30.0px" android:layout_toLeftOf="@id/tv_send_auth_code" android:layout_centerVertical="true" />
    </im.quar.autolayout.view.AutoRelativeLayout>
    <View android:background="@color/ssxinxian7" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0px" android:layout_below="@id/mobile_num_layout" />
    <EditText android:textSize="32.0px" android:textColor="@color/ssxinzi2" android:textColorHint="@color/ssxinzi9" android:id="@id/edt_auth_code" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/account_login_btn_margin_top" android:hint="@string/code_hint" android:singleLine="true" android:maxLength="6" android:layout_below="@id/mobile_num_layout" android:inputType="number" />
    <View android:background="@color/ssxinxian7" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0px" android:layout_below="@id/edt_auth_code" />
    <TextView android:textSize="22.0px" android:textColor="@color/ssxinzi4" android:id="@id/tv_mobile_num_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/account_mobile_num_error" android:layout_below="@id/edt_auth_code" android:layout_alignLeft="@id/edt_auth_code" />
    <TextView android:textSize="22.0px" android:textColor="@color/ssxinzi4" android:id="@id/tv_auth_code_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:text="@string/account_auth_code_error" android:layout_below="@id/edt_auth_code" android:layout_alignLeft="@id/edt_auth_code" />
    <TextView android:textSize="22.0px" android:textColor="@color/ssxinzi3" android:id="@id/tv_auto_register_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0px" android:text="@string/account_auto_register_tips" android:layout_below="@id/edt_auth_code" android:layout_centerHorizontal="true" />
    <Button android:textSize="37.0px" android:textColor="@color/ssxinzi8" android:id="@id/btn_confirm" android:background="@drawable/account_btn_red_selector" android:layout_width="320.0px" android:layout_height="@dimen/account_login_btn_height" android:layout_marginTop="48.0px" android:text="@string/account_auth_and_login" android:layout_below="@id/tv_auto_register_tips" android:layout_centerHorizontal="true" />
    <TextView android:textSize="28.0px" android:textColor="@color/ssxinzi1_selector" android:id="@id/tv_more_login_ways" android:paddingTop="20.0px" android:paddingBottom="20.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="52.0px" android:text="@string/account_more_login_ways" android:drawableRight="@drawable/rightbackicon_pop_ups_sdk_login" android:layout_below="@id/btn_confirm" android:layout_centerHorizontal="true" />
</im.quar.autolayout.view.AutoRelativeLayout>