<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="@dimen/account_margin_horizontal" android:paddingRight="@dimen/account_margin_horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_logo" android:layout_width="162.0px" android:layout_height="112.0px" android:src="@drawable/password_sdk_login" android:layout_centerHorizontal="true" />
    <TextView android:textSize="28.0px" android:textColor="@color/ssxinzi3" android:id="@id/txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0px" android:text="@string/account_password_login" android:layout_below="@id/img_logo" android:layout_centerHorizontal="true" />
    <EditText android:textSize="32.0px" android:textColor="@color/ssxinzi2" android:textColorHint="@color/ssxinzi9" android:id="@id/edt_mobile_num" android:background="@drawable/account_round_input_bg" android:layout_width="fill_parent" android:layout_height="@dimen/account_login_btn_height" android:layout_marginTop="228.0px" android:hint="@string/mobile_hint" android:singleLine="true" android:maxLength="14" android:inputType="phone" />
    <TextView android:textSize="22.0px" android:textColor="@color/ssxinzi4" android:id="@id/tv_mobile_num_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0px" android:layout_marginTop="10.0px" android:text="@string/account_mobile_num_error" android:layout_below="@id/edt_mobile_num" android:layout_alignLeft="@id/edt_mobile_num" />
    <RelativeLayout android:id="@id/password_layout" android:background="@drawable/account_round_input_bg" android:paddingRight="@dimen/account_password_padding" android:layout_width="fill_parent" android:layout_height="@dimen/account_login_btn_height" android:layout_marginTop="@dimen/account_login_btn_margin_top" android:layout_below="@id/edt_mobile_num">
        <EditText android:textSize="32.0px" android:textColor="@color/ssxinzi2" android:textColorHint="@color/ssxinzi9" android:id="@id/edt_password" android:background="@null" android:paddingTop="20.0px" android:paddingBottom="20.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_hint" android:minEms="11" android:layout_toLeftOf="@id/divider" android:layout_centerVertical="true" android:inputType="textPassword" android:imeOptions="actionDone" />
        <TextView android:textSize="28.0px" android:textColor="@color/account_send_auth_code_text" android:id="@id/tv_retrieve_password" android:paddingTop="20.0px" android:paddingBottom="20.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/find_password" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <View android:id="@id/divider" android:background="@color/ssxinxian9" android:layout_width="1.0px" android:layout_height="32.0px" android:layout_marginLeft="30.0px" android:layout_marginRight="30.0px" android:layout_toLeftOf="@id/tv_retrieve_password" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="22.0px" android:textColor="@color/ssxinzi4" android:id="@id/tv_password_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0px" android:layout_marginTop="10.0px" android:text="@string/account_password_error" android:layout_below="@id/password_layout" android:layout_alignLeft="@id/password_layout" />
    <Button android:textSize="36.0px" android:textColor="@color/ssxinzi8" android:id="@id/btn_confirm" android:background="@drawable/account_btn_red_selector" android:layout_width="fill_parent" android:layout_height="@dimen/account_login_btn_height" android:layout_marginTop="@dimen/account_login_btn_margin_top" android:text="@string/account_auth_and_login" android:layout_below="@id/password_layout" />
    <EditText android:id="@id/edt_hide" android:layout_width="20.0px" android:layout_height="20.0px" android:layout_below="@id/btn_confirm" android:layout_centerHorizontal="true" android:alpha="1.0" />
    <TextView android:textSize="28.0px" android:textColor="@color/ssxinzi5_selector" android:id="@id/tv_login_with_auth_code" android:paddingTop="20.0px" android:paddingBottom="20.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0px" android:text="@string/account_free_password_login" android:layout_below="@id/btn_confirm" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/third_party_login_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="60.0px" android:layout_alignParentBottom="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="48.0px" android:layout_above="@id/third_party_login_layout" android:layout_centerHorizontal="true">
        <View android:background="@color/ssxinxian7" android:layout_width="120.0px" android:layout_height="1.0px" />
        <TextView android:textSize="28.0px" android:textColor="@color/ssxinzi3" android:id="@id/tv_more_login_ways" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginRight="20.0px" android:text="@string/account_more_login_ways" android:layout_centerHorizontal="true" />
        <View android:background="@color/ssxinxian7" android:layout_width="120.0px" android:layout_height="1.0px" />
    </LinearLayout>
</RelativeLayout>